--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
 <body>
 
     <main>
+
         <header>
-            <img class="logo" src="https://firebasestorage.googleapis.com/v0/b/awcom-bbb40.appspot.com/o/class-assets%2Flogo.svg?alt=media&token=433168d1-3429-4303-9aeb-41ecf1c2a66b" alt="" width="100%">
+            <img class="logo" src="./images/logo.svg" alt="" width="100%">
             <nav id="main-nav">
                 <ul>
                     <li><a href="#contact">Contact</a></li>
@@ -24,8 +25,8 @@
         </header>
 
         <section id="promo">
-            <img src="https://firebasestorage.googleapis.com/v0/b/awcom-bbb40.appspot.com/o/class-assets%2Fpromo1.jpg?alt=media&token=1f2845b2-4051-4a8d-a29d-55655971a29a" alt="" class="promo-item">
-            <img src="https://firebasestorage.googleapis.com/v0/b/awcom-bbb40.appspot.com/o/class-assets%2Fpromo2.jpg?alt=media&token=48f48fdc-92e1-477b-92b9-e3af73fd756c" alt="" class="promo-item">
+            <img src="./images/promo1.jpg" alt="" class="promo-item">
+            <img src="./images/promo2.jpg" alt="" class="promo-item">
         </section>
 
         <section id="contact" class="info-section">
@@ -59,7 +60,7 @@
             <section class="menu-items">
 
                 <article class="menu-item" id="california-roll">
-                    <img class="menu-item-image" src="https://firebasestorage.googleapis.com/v0/b/awcom-bbb40.appspot.com/o/class-assets%2Fc-roll.jpg?alt=media&token=808fcc8c-3d1e-4526-a319-cb1e59235866" alt="">
+                    <img class="menu-item-image" src="./images/c-roll.jpg" alt="">
                     <article class="menu-info">
                         <h3>California Roll</h3>
                         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
@@ -68,7 +69,7 @@
                 </article>
 
                 <article class="menu-item" id="rainbow-roll">
-                    <img class="menu-item-image" src="https://firebasestorage.googleapis.com/v0/b/awcom-bbb40.appspot.com/o/class-assets%2Fr-roll.jpg?alt=media&token=0fc609fc-01bd-4033-bec1-16a615d357b2" alt="">
+                    <img class="menu-item-image" src="./images/r-roll.jpg" alt="">
                     <article class="menu-info">
                         <h3>Rainbow Roll</h3>
                         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
@@ -77,7 +78,7 @@
                 </article>
 
                 <article class="menu-item" id="dragon-roll">
-                    <img class="menu-item-image" src="https://firebasestorage.googleapis.com/v0/b/awcom-bbb40.appspot.com/o/class-assets%2Fd-roll.jpg?alt=media&token=5e6879e9-b3f7-48e0-8340-88e7c9d0e849" alt="">
+                    <img class="menu-item-image" src="./images/d-roll.jpg" alt="">
                     <article class="menu-info">
                         <h3>Dragon Roll</h3>
                         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
@@ -86,7 +87,7 @@
                 </article>
 
                 <article class="menu-item" id="california-roll">
-                    <img class="menu-item-image" src="https://firebasestorage.googleapis.com/v0/b/awcom-bbb40.appspot.com/o/class-assets%2Fc-roll.jpg?alt=media&token=808fcc8c-3d1e-4526-a319-cb1e59235866" alt="">
+                    <img class="menu-item-image" src="./images/c-roll.jpg" alt="">
                     <article class="menu-info">
                         <h3>California Roll</h3>
                         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
@@ -95,7 +96,7 @@
                 </article>
 
                 <article class="menu-item" id="rainbow-roll">
-                    <img class="menu-item-image" src="https://firebasestorage.googleapis.com/v0/b/awcom-bbb40.appspot.com/o/class-assets%2Fr-roll.jpg?alt=media&token=0fc609fc-01bd-4033-bec1-16a615d357b2" alt="">
+                    <img class="menu-item-image" src="./images/r-roll.jpg" alt="">
                     <article class="menu-info">
                         <h3>Rainbow Roll</h3>
                         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
@@ -104,7 +105,7 @@
                 </article>
 
                 <article class="menu-item" id="dragon-roll">
-                    <img class="menu-item-image" src="https://firebasestorage.googleapis.com/v0/b/awcom-bbb40.appspot.com/o/class-assets%2Fd-roll.jpg?alt=media&token=5e6879e9-b3f7-48e0-8340-88e7c9d0e849" alt="">
+                    <img class="menu-item-image" src="./images/d-roll.jpg" alt="">
                     <article class="menu-info">
                         <h3>Dragon Roll</h3>
                         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
@@ -113,7 +114,7 @@
                 </article>
 
                 <article class="menu-item" id="california-roll">
-                    <img class="menu-item-image" src="https://firebasestorage.googleapis.com/v0/b/awcom-bbb40.appspot.com/o/class-assets%2Fc-roll.jpg?alt=media&token=808fcc8c-3d1e-4526-a319-cb1e59235866" alt="">
+                    <img class="menu-item-image" src="./images/c-roll.jpg" alt="">
                     <article class="menu-info">
                         <h3>California Roll</h3>
                         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
@@ -122,7 +123,7 @@
                 </article>
 
                 <article class="menu-item" id="rainbow-roll">
-                    <img class="menu-item-image" src="https://firebasestorage.googleapis.com/v0/b/awcom-bbb40.appspot.com/o/class-assets%2Fr-roll.jpg?alt=media&token=0fc609fc-01bd-4033-bec1-16a615d357b2" alt="">
+                    <img class="menu-item-image" src="./images/r-roll.jpg" alt="">
                     <article class="menu-info">
                         <h3>Rainbow Roll</h3>
                         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
@@ -131,7 +132,7 @@
                 </article>
 
                 <article class="menu-item" id="dragon-roll">
-                    <img class="menu-item-image" src="https://firebasestorage.googleapis.com/v0/b/awcom-bbb40.appspot.com/o/class-assets%2Fd-roll.jpg?alt=media&token=5e6879e9-b3f7-48e0-8340-88e7c9d0e849" alt="">
+                    <img class="menu-item-image" src="./images/d-roll.jpg" alt="">
                     <article class="menu-info">
                         <h3>Dragon Roll</h3>
                         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
@@ -143,7 +144,7 @@
         </section>
         <footer>
             <article class="logo">
-                <img src="https://firebasestorage.googleapis.com/v0/b/awcom-bbb40.appspot.com/o/class-assets%2Flogo.svg?alt=media&token=433168d1-3429-4303-9aeb-41ecf1c2a66b" alt="" width="100%">
+                <img src="./images/logo.svg" alt="" width="100%">
                 <div class="footer-info">
                     SUN-MON 11AM-10PM<br> FRI-SAT 11AM-12PM<br> 800-555-2434
                     <br> 111 7TH AVE<br> SAN DIEGO, CA 92101
